<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="@dimen/extra_big_margin"
    app:layoutDescription="@xml/fragment_successful_sign_up_scene"
    tools:background="@color/default_dark"
    tools:motionDebug="SHOW_ALL">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_title_congratulations"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/white"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_congratulations_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_msg_successfully_signed_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:alpha="1"
        tools:textColor="@color/white"
        tools:visibility="visible" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_animated_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_anim"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:alpha="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_continue"
        android:textColor="@color/white"
        android:visibility="visible"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:alpha="1"
        tools:ignore="UnusedAttribute"
        tools:visibility="visible" />

</androidx.constraintlayout.motion.widget.MotionLayout>